fixing horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
+  overscroll-behavior-x: hidden;
+  overflow-x: hidden;
+}
+
+html {
+  max-width: 100vw;
 }
 
 code {
